# school-api

./: .gitignore  .scrutinizer.yml  .travis.yml  README.md  data.yml  pyproject.toml  requirements.txt  setup.py  teaching_plan_crawler.py  湖北师范大学文理学院 2023-05-30.xlsx
doc/: README.md  book.json
doc/api/: index.md  成绩接口.md  教学场地.md  登陆接口.md  课表接口.md
doc/example/: 网页api.md
doc/home/: 模块参数.md  简易示例.md
examples/: README.md  base_sample.py  custom_handle.py  data.yml  use_redis.py
examples/wechat_platform/: README.md  run.py  utils.py
examples/wechat_platform/static/css/: schedule.css
school_api/: config.py
school_api/client/: __init__.py  base.py  utils.py
school_api/client/api/: plan_schedule.py  schedule.py  user_info.py
school_api/client/api/utils/: schedule_parse.py
tests/: test_bm_teacher.py  test_gdou_school.py  test_porxy.py  test_redis.py  test_student.py  test_teacher.py
